syntax = "proto2";

package spirits.v1;

import "spirits/v1/meta.proto";
import "google/api/annotations.proto";

option go_package = "github.com/ankeesler/spirits;spiritsv1";

// ActionService provides a simple CRUD API for Action's.
service ActionService {
  rpc CreateAction(CreateActionRequest) returns (CreateActionResponse) {
    option (google.api.http) = {
      post: "/spirits/v1/actions"
      body: "*"
    };
  }

  rpc GetAction(GetActionRequest) returns (GetActionResponse) {
    option (google.api.http) = {
      get: "/spirits/v1/{id=actions/*}"
    };
  }

  rpc ListActions(ListActionsRequest) returns (ListActionsResponse) {
    option (google.api.http) = {
      get: "/spirits/v1/actions"
    };
  }

  rpc UpdateAction(UpdateActionRequest) returns (UpdateActionResponse) {
    option (google.api.http) = {
      put: "/spirits/v1/{action.meta.id=actions/*}"
      body: "*"
    };
  }

  rpc DeleteAction(DeleteActionRequest) returns (DeleteActionResponse) {
    option (google.api.http) = {
      delete: "/spirits/v1/{id=actions/*}"
    };
  }
}

message CreateActionRequest {
  // The Action to create. The ID will be filled in on response.
  required Action action = 1;
}

message CreateActionResponse {
  // The newly created Action.
  required Action action = 1;
}

message GetActionRequest {
  // The id of the Action to get.
  required string id = 1;
}

message GetActionResponse {
  // The retrieved Action.
  required Action action = 1;
}

message ListActionsRequest {
}

message ListActionsResponse {
  repeated Action actions = 1;
}

message UpdateActionRequest {
  // The new version of the Action.
  required Action action = 1;
}

message UpdateActionResponse {
  // The newly updated Action.
  required Action action = 1;
}

message DeleteActionRequest {
  // The id of the Action to delete.
  required string id = 1;
}

message DeleteActionResponse {
  // The newly deleted Action.
  required Action action = 1;
}

// Action describes what a Spirit can actually do on their turn in a Battle.
//
// An Action is applied to zero or more Spirit's on a Battle turn.
message Action {
  // Metadata about this Action.
  optional Meta meta = 1;

  // Description of the Action.
  optional string description = 2;

  oneof definition {
    // An action script.
    string script = 3;
  }
}
